SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 03/02/2006, verison 0.08 (0.0.6, 0.0.6, 0.1.0, 0.0.1): roms (testing phase)
	- the right view did not filter file types correctly
	- user's suggestion: automatically change for detected cable/calc.
	- fixed displaying of greek chars in the action dbox.
	- can't load pdf/eps files
	- clamp gtk_update.cnt2 to avoid warnings
	- don't update dirlist with TI82/85

- 21/02/2006, version 0.07 (0.0.6, 0.0.5, 0.0.9, 0.0.1): roms
	- switched to ticonv library
	- fixed bug with the re-target folder feature.
	- make hand-held goes to HOME when not ready (kevin)
	- implemented feature request: "TiLP always gets a list of the files on the calc, even if I already " (T. Evans)
	- when ticables/ticalcs error occurs: reset cable and wait for 0.5s (i/o link active -> disappear)
	- don't use cable_handle & calc_handle fields: they are private
	- fixed command line
	- added skip/retry/cancel box when sending of multiple files
	- same for receiving of several variables

- 07/02/2006, version 0.06 (0.0.4, 0.0.6, 0.0.4): roms
	- updated manpage according to bug #1397587
	- varnames with greek characters are now saved fine (T. Evans)
	- fixed bug #1430307: "full path on cmd line" (hiboo)
	- removed 'exit home dir' limitation/security (kevin)
	- ungroup TI82/85 files when option is set to 'single'
	- rewrite target folder when sending to a specific folder (T. Evans)
	- fixed bug in the Win32 file selector (default folder)

- 03/02/2006, version 0.05 (0.0.4, 0.0.6, 0.0.4): roms
	- tifiles2 library has switched to 'glib filename encoding'
	- fixed missing or bad utf8/glib conversions
	- added TiGroup support (sending only =  read only)

- 30/01/2006, version 0.04 (0.0.4, 0.0.5, 0.0.4): roms
	- reverted tifiles to locale encoding
	- checked/fixed tilp for use of the good filename encoding

- 21/01/2006, version 0.03 (0.0.4, 0.0.5, 0.0.4): roms
	- fixed a bug in the TiLP error management system