@@ -3,6 +3,7 @@ This is a list of some things to do:
 - release SDK
 - pbars are not always updated
 - send/recv FLASH app : violation with delete_content
+- select files for deletion, cancel => violation in tree_selection_changed
 
 - suggestions of 	"Travis Evans" <travisgevans@earthlink.net>:
 <<
