@@ -8,6 +8,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- fixed displaying of greek chars in the action dbox.
 	- can't load pdf/eps files
 	- clamp gtk_update.cnt2 to avoid warnings
+	- fixed group filename (recently modified but not propagated).
 	- don't update dirlist with TI82/85
 
 - 21/02/2006, version 0.07 (0.0.6, 0.0.5, 0.0.9, 0.0.1): roms
